--- a/.github/workflows/limit-size.yml
+++ b/.github/workflows/limit-size.yml
@@ -14,8 +14,29 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Use nodejs
+      uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
+
+    - name: Lint markdowns
+      uses: nosborn/github-action-markdown-cli@v1.1.1
+      with:
+        files: .
+
+    - name: Check Spelling
+      run: |
+        npm install -g markdown-spellcheck
+        mdspell --ignore-numbers --ignore-acronyms --report --en-us ./*.md
+        
+    - name: Check goodness of writing
+      run: |
+        npm install -g write-good
+        npx write-good *.md
+
     - name: Install lizard
       run: pip install lizard
 
     - name: Limit complexity
       run: $HOME/.local/bin/lizard --CCN 3
+
