--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -13,11 +13,15 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Build with dotnet
+      run: dotnet build
+
     - name: Run unit tests
       run: dotnet test --logger "console;verbosity=detailed";
 
     - name: Generate coverage report
       run: dotnet test --collect:"XPlat Code Coverage"
+
       
     - name: Check Coverage
       run: powershell ./coverage.ps1 -linerate 0.95 -branchrate 0.8
