--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
     - name: Limit complexity
       run: $HOME/.local/bin/lizard --CCN 3
 
-    # - name: Build with dotnet
-    #   run: dotnet build
+    - name: Build with dotnet
+      run: dotnet build
 
     - name: Run unit tests
       run: dotnet test --logger "console;verbosity=detailed";
