--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,5 @@ jobs:
 
     - name: Check Code Duplicacy
       run: |
-        npm cache clean npm cache clean
-        npm install -g jscpd
+        npm clean-install -g jscpd
         npx jscpd /sender.Tests/*
