--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
 
     - name: Check Code Duplicacy
       run: |
-        npm clean-install -g jscpd
+        npm install -g jscpd
         npx jscpd /sender.Tests/*
