--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,6 @@ jobs:
 
     - name: Check Code Duplicacy
       run: |
-        npm cache clean
+        npm cache clean --force
         npm install -g jscpd
         npx jscpd /sender.Tests/*
