--- a/.github/workflows/build_and_run_tests.yml
+++ b/.github/workflows/build_and_run_tests.yml
@@ -18,3 +18,15 @@ jobs:
 
     - name: Run unit tests
       run: dotnet test --logger "console;verbosity=detailed";
+
+    - name: Install resharper
+      run: dotnet tool install -g JetBrains.ReSharper.GlobalTools
+    
+    - name: Run resharper inspection
+      run: jb inspectcode OddOrEven.sln /output=insreport.xml
+
+    - name: Run resharper duplicate code check
+      run: jb dupfinder OddOrEven.sln -o=dupreport.xml
+
+    - name: Check Reports
+      run: powershell ./resharper.ps1
