--- a/sender/sender.csproj
+++ b/sender/sender.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Sender.cs" />
-    <Compile Include="csv_read.cs" />
+    <Compile Include="CSVRead.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
