--- a/.github/workflows/build_and_run_tests.yml
+++ b/.github/workflows/build_and_run_tests.yml
@@ -19,17 +19,17 @@ jobs:
     - name: Run unit tests
       run: dotnet test --logger "console;verbosity=detailed";
 
-    # - name: Install resharper
-    #   run: dotnet tool install -g JetBrains.ReSharper.GlobalTools
+    - name: Install resharper
+      run: dotnet tool install -g JetBrains.ReSharper.GlobalTools
     
-    # - name: Run resharper inspection
-    #   run: jb inspectcode review-case-s22b10.sln /output=insreport.xml
+    - name: Run resharper inspection
+      run: jb inspectcode review-case-s22b10.sln /output=insreport.xml
 
-    # - name: Run resharper duplicate code check
-    #   run: jb dupfinder review-case-s22b10.sln -o=dupreport.xml
+    - name: Run resharper duplicate code check
+      run: jb dupfinder review-case-s22b10.sln -o=dupreport.xml
 
-    # - name: Check Reports
-    #   run: powershell ./resharper.ps1
+    - name: Check Reports
+      run: powershell ./resharper.ps1
 
     - name: Generate coverage report
       run: dotnet test --collect:"XPlat Code Coverage"
