--- a/.github/workflows/build_and_run_tests.yml
+++ b/.github/workflows/build_and_run_tests.yml
@@ -23,10 +23,10 @@ jobs:
       run: dotnet tool install -g JetBrains.ReSharper.GlobalTools
     
     - name: Run resharper inspection
-      run: jb inspectcode ConsoleApp1.sln /output=insreport.xml
+      run: jb inspectcode Review-case.sln /output=insreport.xml
 
     - name: Run resharper duplicate code check
-      run: jb dupfinder ConsoleApp1.sln -o=dupreport.xml
+      run: jb dupfinder Review-case.sln -o=dupreport.xml
 
     - name: Check Reports
       run: powershell ./resharper.ps1
