--- a/.github/workflows/reshaper.yml
+++ b/.github/workflows/reshaper.yml
@@ -21,7 +21,7 @@ jobs:
         run: jb inspectcode Review-case.sln /output=insreport.xml
 
       - name: Run resharper duplicate code check
-        run: jb dupfinder Review-case.sln -o=dupreport.xml
+        run: jb dupfinder Review-case.sln /output=dupreport.xml
 
       - name: Check Reports
         run: powershell ./resharper.ps1
