--- a/sender/sender.csproj
+++ b/sender/sender.csproj
@@ -65,7 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Sender.cs" />
-    <Compile Include="CSVRead.cs" />
+    <Compile Include="CsvRead.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
