--- a/sender/sender.csproj
+++ b/sender/sender.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Sender.cs" />
     <Compile Include="CsvRead.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Writer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
